adding extra stuff to ignore list

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 ################################################################################
 
 /Vlc.Forms/packages
+/Vlc.Forms/Vlc.Forms/Vlc.Forms/bin/Debug
+/Vlc.Forms/Vlc.Forms/Vlc.Forms/obj/Debug
+/Vlc.Forms/Vlc.Forms/Vlc.Forms.Droid/bin/Debug
+/Vlc.Forms/Vlc.Forms/Vlc.Forms.Droid/obj/Debug
